--- a/style.css
+++ b/style.css
@@ -66,8 +66,13 @@ section>div {
 
 }
 
+#left-div {
+    z-index: 2;
+}
+
 
 #right-div {
+    z-index: 1;
     background-image: url(photo.png);
     background-size: cover;
     background-position: 100%;
@@ -77,13 +82,14 @@ section>div {
 }
 
 #right-div:hover {
-
+    z-index: 1;
     filter: grayscale(80%);
     /* opacity: .6; */
 
 }
 
 #main-content {
+    z-index: 2;
     position: relative;
     padding-top: 50px;
     height: 90%;
@@ -94,6 +100,7 @@ section>div {
 }
 
 #main-content h1 {
+
     font-size: 3.5rem;
     white-space: nowrap;
     position: relative;
@@ -147,6 +154,7 @@ h1:hover {
     background-color: #4a7aa4;
 
 }
+
 #div-icon {
     height: 10%;
     display: flex;
@@ -159,4 +167,3 @@ h1:hover {
     border-radius: 50%;
     padding: 10px;
 }
-
